# ENM612-finalproject

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  verify_fixes.py
solutions/: blobs_3d_results.txt  breast_cancer_results.txt  heart_results.txt  ionosphere_results.txt  liver_results.txt  moons_results.txt  votes_results.txt  wbcd_results.txt  wbcp_results.txt
src/: dataloader.py  grid_search.py  rpcf.py  solvers.py  utils.py  visualizer.py  vns_rpcf.py
