[project]
name = "rpcf-project"
version = "0.1.0"
description = "Revised Polyhedral Conic Functions (r-PCF) implementation with VNS enhancement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gurobipy",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "ucimlrepo>=0.0.7",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]
